--- a/docker/dockerfile-tomcat
+++ b/docker/dockerfile-tomcat
@@ -13,7 +13,7 @@ FROM openjdk:17-jdk-slim
 
 ENV CATALINA_HOME=/opt/tomcat
 ENV PATH=$CATALINA_HOME/bin:$PATH
-
+VOLUME [ "/data" ]
 COPY --from=downloader /tmp/apache-tomcat-* $CATALINA_HOME
 
 EXPOSE 8080
