--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -14,3 +14,20 @@ spec:
       protocol: TCP
       port: 80
       targetPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: pod2-app-svc
+spec:
+ type: LoadBalancer 
+ selector:
+   name: pod2-app
+   app: pod2-app
+   ports:
+     - name: httpd
+       protocol: TCP
+       port: 80
+       targetPort: 80
+
+
