--- Auto Git Commit ---

--- a/k8s/daemonset.yaml
+++ b/k8s/daemonset.yaml
@@ -6,4 +6,17 @@ metadata:
     name: my-daemon
     app: my-daemon
 spec:
-
+replicas: 3
+  selector:
+    matchLabels:
+      app: nginx
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      containers:
+      - name: nginx
+        image: nginx:1.14.2
+        ports:
+        - containerPort: 80
