--- a/k8s/statefull.yaml
+++ b/k8s/statefull.yaml
@@ -24,5 +24,4 @@ spec:
           - name: db
             containerPort: 3306
           env:
-          - name: MARIADB_ROOT_PASSWORD
-            value: admin123
+            valu
