--- a/k8s/statefull.yaml
+++ b/k8s/statefull.yaml
@@ -25,4 +25,5 @@ spec:
             containerPort: 3306
           env:
             valueFrom:
-               config
+               ConfigMapKeyRef:
+               
