--- a/k8s/volume/pod.yaml
+++ b/k8s/volume/pod.yaml
@@ -10,6 +10,6 @@ spec:
       - mountPath: "/usr/share/nginx/html/"
         name: mypd
   volumes:
-    - name: mypd
+    - name: mypv
       persistentVolumeClaim:
         claimName: myclaim
