--- a/k8s/volume/pv.yaml
+++ b/k8s/volume/pv.yaml
@@ -8,7 +8,7 @@ spec:
   volumeMode: Filesystem
   accessModes: 
     - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Recycle
+  persistentVolumeReclaimPolicy: Retain
   storageClassName: standard
   hostPath:
     path: /mnt/data
