--- Auto Git Commit ---

--- a/k8s/volume/pv.yaml
+++ b/k8s/volume/pv.yaml
@@ -12,3 +12,20 @@ spec:
   storageClassName: standard
   hostPath:
     path: /mnt/data
+
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: mypv
+spec:
+  capacity:
+    storage: 10G
+  volumeMode: Filesystem
+  accessModes: 
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: standard
+  hostPath:
+    path: /mnt/data
+
