--- a/k8s/volume/pv.yaml
+++ b/k8s/volume/pv.yaml
@@ -25,7 +25,7 @@ spec:
   accessModes: 
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: standard
+  awsEbs
   hostPath:
     path: /mnt/data
 
