--- Auto Git Commit ---

--- a/k8s/volume/pv.yaml
+++ b/k8s/volume/pv.yaml
@@ -25,7 +25,8 @@ spec:
   accessModes: 
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  awsEbs
+  awsElasticBlockstore:
+    volumeID
   hostPath:
     path: /mnt/data
 
