--- a/k8s/volume/pv.yaml
+++ b/k8s/volume/pv.yaml
@@ -26,7 +26,7 @@ spec:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
   awsElasticBlockstore:
-    volumeID
+    volumeID: ID
   hostPath:
     path: /mnt/data
 
