--- a/k8s/volume/pv.yaml
+++ b/k8s/volume/pv.yaml
@@ -13,20 +13,20 @@ spec:
   hostPath:
     path: /mnt/data
 
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: mypv
-spec:
-  capacity:
-    storage: 10G
-  volumeMode: Filesystem
-  accessModes: 
-    - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Retain
-  awsElasticBlockstore:
-    volumeID: ID
-    fsType: ext4
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: mypv
+# spec:
+#   capacity:
+#     storage: 10G
+#   volumeMode: Filesystem
+#   accessModes: 
+#     - ReadWriteOnce
+#   persistentVolumeReclaimPolicy: Retain
+#   awsElasticBlockstore:
+#     volumeID: ID
+#     fsType: ext4
   
 
