--- a/k8s/volume/pv.yaml
+++ b/k8s/volume/pv.yaml
@@ -4,7 +4,7 @@ metadata:
   name: mypv
 spec:
   capacity:
-    storage: 10G
+    storage: 10Gi
   volumeMode: Filesystem
   accessModes: 
     - ReadWriteOnce
