--- a/k8s/volume/pvc.yaml
+++ b/k8s/volume/pvc.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   resources:
     requests:
-      storage: 5G
+      storage: 5Gi
   volumeMode: Filesystem
   accessModes:
     - ReadWriteOnce
