--- a/k8s/volume/pod.yaml
+++ b/k8s/volume/pod.yaml
@@ -7,7 +7,7 @@ spec:
     - name: myfrontend
       image: nginx
       volumeMounts:
-      - mountPath: "/usr/share/nginx/html/"
+      - mountPath: "/usr/share/nginx/html"
         name: mypv
   volumes:
     - name: mypv
