--- Auto Git Commit ---

--- a/k8s/ingress/deployment.yaml
+++ b/k8s/ingress/deployment.yaml
@@ -20,18 +20,18 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: cbz-mobile
+  name: apple-mobile
 spec:
   selector:
     matchLabels:
-      app: cbz-mobile
+      app: apple-mobile
   template:
     metadata:
       labels:
-        app: cbz-mobile
+        app: apple-mobile
     spec:
       containers:
-      - name: cbz-mobile
+      - name: apple-mobile
         image: nginx
         ports:
         - containerPort: 80
