--- a/k8s/ingress/services.yaml
+++ b/k8s/ingress/services.yaml
@@ -7,7 +7,7 @@ metadata:
     env: devops
 spec:
   selector:
-    app: cbz-home
+    app: apple-home
   ports:
     - name: http
       protocol: TCP
