--- Auto Git Commit ---

--- a/k8s/ingress/services.yaml
+++ b/k8s/ingress/services.yaml
@@ -23,7 +23,7 @@ metadata:
     env: devops
 spec:
   selector:
-    app: cbz-mobile
+    app: app-mobile
   ports:
     - name: http
       protocol: TCP
