--- Auto Git Commit ---

--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -28,7 +28,7 @@ spec:
       #       name: my-svc-mobile  
       #       port: 
       #         number: 80
-  - host: mobile.com
+  - host: apple.com/mobile.com
     http:
       paths:
       - pathType: Prefix
