--- Auto Git Commit ---

--- a/k8s/ingress/deployment.yaml
+++ b/k8s/ingress/deployment.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: apple-home
-        image: nginx
+        image: httpd
         ports:
         - containerPort: 80
 ---
