--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -16,7 +16,7 @@ spec:
             name: my-svc-home 
             port: 
               number: 80
-  - host: apple.com/mobile
+  - host: apple.com.mobile
     http:
       paths:
       - pathType: Prefix
