--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -16,13 +16,13 @@ spec:
             name: my-svc-home 
             port: 
               number: 80
-  - host: apple.com.mobile
-    http:
-      paths:
-      - pathType: Prefix
-        path: "/mobile"
-        backend:
-          service:
-            name: my-svc-mobile
-            port: 
-              number: 80
+  # - host: apple.com.mobile
+  #   http:
+  #     paths:
+  #     - pathType: Prefix
+  #       path: "/mobile"
+  #       backend:
+  #         service:
+  #           name: my-svc-mobile
+  #           port: 
+  #             number: 80
