--- Auto Git Commit ---

--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -16,6 +16,7 @@ spec:
             name: my-svc-home 
             port: 
               number: 80
+      - pathType:
   # - host: apple.com.mobile
   #   http:
   #     paths:
