--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -16,7 +16,8 @@ spec:
             name: my-svc-home 
             port: 
               number: 80
-      - pathType:
+      path:        
+      - pathType: pre
   # - host: apple.com.mobile
   #   http:
   #     paths:
