--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -18,16 +18,13 @@ spec:
             name: my-svc-home 
             port: 
               number: 80
-      path:        
+  - host: apple.com.mobile
+    http:
+      paths:
       - pathType: Prefix
-        path: /mobile
-  # - host: apple.com.mobile
-  #   http:
-  #     paths:
-  #     - pathType: Prefix
-  #       path: "/mobile"
-  #       backend:
-  #         service:
-  #           name: my-svc-mobile
-  #           port: 
-  #             number: 80
+        path: "/mobile"
+        backend:
+          service:
+            name: my-svc-mobile
+            port: 
+              number: 80
