--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -30,3 +30,24 @@ spec:
               number: 80
 
 #for path based routing
+rules:
+  - host: tar.com                 
+    http:                         
+      paths:
+      - pathType: Prefix
+        path: "/"                     
+        backend:
+          service:
+            name: my-svc-home 
+            port: 
+              number: 80
+  - host: tar.mobile.com
+    http:
+      paths:
+      - pathType: Prefix
+        path: "/"
+        backend:
+          service:
+            name: my-svc-mobile
+            port: 
+              number: 80
