--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -30,22 +30,24 @@ spec:
               number: 80
 
 #for path based routing
-rules:
-  - host: tar.com                 
-    http:                         
-      paths:
-      - pathType: Prefix
-        path: "/"                     
-        backend:
-          service:
-            name: my-svc-home 
-            port: 
-              number: 80
-      paths:
-      - pathType: Prefix
-        path: "/mobile"
-        backend:
-          service:
-            name: my-svc-mobile
-            port: 
-              number: 80
+# rules:
+#   - host: tar.com                 
+#     http:                         
+#       paths:
+#       - pathType: Prefix
+#         path: "/"                     
+#         backend:
+#           service:
+#             name: my-svc-home 
+#             port: 
+#               number: 80
+#       paths:
+#       - pathType: Prefix
+#         path: "/mobile"
+#         backend:
+#           service:
+#             name: my-svc-mobile
+#             port: 
+#               number: 80
+
+##
