--- Auto Git Commit ---

--- a/ansible/sample.yaml
+++ b/ansible/sample.yaml
@@ -4,3 +4,6 @@
    - name: 1st-msg
      debug:
        msg: "welcome to ansible world"
+   - name: 1st-msg
+     debug:
+       msg: "welcome to devops"
