--- a/ansible/sample.yaml
+++ b/ansible/sample.yaml
@@ -7,3 +7,6 @@
    - name: 1st-msg
      debug:
        msg: "welcome to devops"
+   - name: 1st-msg
+     debug:
+       msg: "welcome to ansible world"
