--- Auto Git Commit ---

--- a/ansible/sample.yaml
+++ b/ansible/sample.yaml
@@ -1,8 +1,8 @@
 - name: my sample playbook
   hosts: all
-  task: 
-   - name: 1st-msg
-     debug:
+  tasks: 
+  - name: 1st-msg
+    debug:
        msg: "welcome to ansible world"
    - name: 1st-msg
      debug:
