--- a/ansible/sample.yaml
+++ b/ansible/sample.yaml
@@ -1,7 +1,7 @@
 - name: my sample playbook
   hosts: all
   vars: 
-    - name: "india"
+    name: "india"
   tasks: 
   - name: 1st-msg
     debug:
