--- Auto Git Commit ---

--- a/ansible/sample.yaml
+++ b/ansible/sample.yaml
@@ -5,7 +5,7 @@
   vars_files:
    - ./var.txt
   vars_prompt:
-    - name: URL
+    - name: city
       prompt: enter your varible value
       private: false
 
