--- Auto Git Commit ---

--- a/ansible/sample.yaml
+++ b/ansible/sample.yaml
@@ -6,7 +6,7 @@
   #  - ./var.txt
   vars_prompt:
     - name: city
-      prompt: enter your varible value
+      prompt: enter your city
       private: true
 
   tasks: 
