--- a/ansible/sample.yaml
+++ b/ansible/sample.yaml
@@ -23,7 +23,7 @@
       city: "mumbai"
   - name: execute cammand
     shell: hostname
-
+    register:
   - name: execute cammand
     debug:
       msg: hostname
