--- a/ansible/sample.yaml
+++ b/ansible/sample.yaml
@@ -26,7 +26,7 @@
     register: remote
   - name: print cammand output
     debug:
-      msg: "{{remote}}"
+      msg: "{{remote.stdout}}"
 
   
     
