--- a/ansible/gatheringfacts.yaml
+++ b/ansible/gatheringfacts.yaml
@@ -1,4 +1,6 @@
 - name: gather facts
   hosts: all
   tasks:
-    - name: print machine name:
+    - name: print machine name
+      debug:
+        msg: 
