--- Auto Git Commit ---

--- a/ansible/gatheringfacts.yaml
+++ b/ansible/gatheringfacts.yaml
@@ -3,4 +3,4 @@
   tasks:
     - name: print machine name
       debug:
-        msg:  "ansible_distribution"
+        msg:  "{{ansible_distribution}}"
