--- Auto Git Commit ---

--- a/ansible/gatheringfacts.yaml
+++ b/ansible/gatheringfacts.yaml
@@ -4,4 +4,6 @@
     - name: print machine name
       debug:
         msg:  "{{ansible_distribution}}"
-    - name: 
+    - name: print os family
+      debug:
+        
