--- a/ansible/gatheringfacts.yaml
+++ b/ansible/gatheringfacts.yaml
@@ -4,6 +4,10 @@
     - name: print machine name
       debug:
         msg:  "{{ansible_distribution}}"
+    - name: print 
+      debug:
+        msg: "{{ansible_os_family}}"
     - name: print os family
       debug:
         msg: "{{ansible_os_family}}"
+    
