--- a/ansible/install.yaml
+++ b/ansible/install.yaml
@@ -5,8 +5,9 @@
       yum:
        name: httpd
        state: latest
+       when: 
     - name: install apache2
       apt:
        name: apache2
        state: latest
-       
+
