--- a/ansible/install.yaml
+++ b/ansible/install.yaml
@@ -5,7 +5,7 @@
       yum:
        name: httpd
        state: latest
-       when: 
+       when: ansible_os_family
     - name: install apache2
       apt:
        name: apache2
