--- a/ansible/package.yaml
+++ b/ansible/package.yaml
@@ -1,1 +1,15 @@
 - name: using package module
+  hosts: all
+  become: true
+  tasks:
+    - name: install httpd
+      
+       name: httpd
+       state: latest
+      when: ansible_os_family == "RedHat"
+    - name: install apache2
+      apt:
+       name: apache2
+       state: latest
+      when: ansible_os_family == "Debian"
+
