--- a/ansible/package.yaml
+++ b/ansible/package.yaml
@@ -8,7 +8,7 @@
        state: latest
       when: ansible_os_family == "RedHat"
     - name: install apache2
-      
+      package: 
        name: apache2
        state: latest
       when: ansible_os_family == "Debian"
