--- a/ansible/loop.yaml
+++ b/ansible/loop.yaml
@@ -1,11 +1,7 @@
 - name: using package module
   hosts: all
   tasks:
-    - name: install httpd
-      package:
-       name: httpd
-       state: latest
-      when: ansible_os_family == "RedHat"
+    - name: 
     - name: install apache2
       package: 
        name: apache2
