--- a/ansible/loop.yaml
+++ b/ansible/loop.yaml
@@ -3,7 +3,8 @@
   tasks:
     - name: print all fruits
       debug:
-        msg: {{}}
+        msg: "{{item}}"
+        
     - name: install apache2
       package: 
        name: apache2
