--- Auto Git Commit ---

--- a/ansible/loop.yaml
+++ b/ansible/loop.yaml
@@ -5,7 +5,8 @@
       debug:
         msg: "{{item}}"
       loop:
-        
+        - apple
+        - 
     - name: install apache2
       package: 
        name: apache2
