--- a/ansible/loop.yaml
+++ b/ansible/loop.yaml
@@ -10,6 +10,6 @@
         - mango
     - name: install apache2
       package: 
-       name: apache2
+       name: 
        state: latest
-      when: ansible_os_family == "Debian"
+    
