--- a/ansible/package.yaml
+++ b/ansible/package.yaml
@@ -13,10 +13,11 @@
       when: ansible_os_family == "Debian"
     - name: start service
       systemd_service:
-        name: start service
+        name: apache2
         state: restarted
         enabled: true
         daemon_reload: true
-        
+      when: ansible_os_family == "Debian"
+
 
 
