--- a/ansible/copy.yaml
+++ b/ansible/copy.yaml
@@ -2,4 +2,8 @@
   hosts: all
   tasks:
     - name: install apache2
+      package: 
+       name: apache2
+       state: latest
+      when: ansible_os_family == "Debian"
       
