--- a/ansible/copy.yaml
+++ b/ansible/copy.yaml
@@ -8,7 +8,7 @@
     - name: copy file in server
       copy:
         src: ./index.html
-        dest: /var/www/html/index
+        dest: /var/www/html/index.html
 
       
       
