--- Auto Git Commit ---

--- a/ansible/copy.yaml
+++ b/ansible/copy.yaml
@@ -9,7 +9,7 @@
       copy:
         src: ./index.html
         dest: /var/www/html/index.html
-        
+    - name: restart the service
 
       
       
