--- Auto Git Commit ---

--- a/ansible/blockinfile.yaml
+++ b/ansible/blockinfile.yaml
@@ -20,4 +20,4 @@
       block: |
         <h1> hello my name is suraj </h1>
         <h2> this line 2 </h2>
-        <h3> this is block of lines </h3>
+        <h3> this is a block of lines </h3>
