--- a/ansible/blockinfile.yaml
+++ b/ansible/blockinfile.yaml
@@ -17,6 +17,7 @@
     - name: block of files added
       blockinfile:
         path: /var/www/html/index.html
+        marker: "<!-- {mark} ANSIBLE MANAGED BLOCK -->"
         block: |
           <h1> hello my name is suraj </h1>
           <h2> this line 2 </h2>
