--- a/ansible/roles/weserver_role/handlers/main.yml
+++ b/ansible/roles/weserver_role/handlers/main.yml
@@ -1,6 +1,7 @@
-systemd_service:
-  name: apache2
-  state: restarted
-  enabled: true
-  daemon_reload: true
-when: ansible_os_family == "Debian"
+- name: restart service
+  systemd_service:
+    name: apache2
+    state: restarted
+    enabled: true
+    daemon_reload: true
+  when: ansible_os_family == "Debian"
